# my-local-nostr

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml  justfile  rustfmt.toml
.github/workflows/: test.yml
src/: client.rs  config.rs  db.rs  error.rs  main.rs  repo.rs  utils.rs
