[package]
name = "my-local-relay"
version = "0.1.0"
edition = "2021"
# repository = 
authors = ["thesimplekid"]
license = "BSD 3-Clause"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = { version = "0.8.3", features = ["prost"] }
config = { version = "0.12", features = ["toml"] }
tracing = "0.1.36"
tracing-subscriber = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
redb = { version = "0.13.0", features = ["logging"] }
log = "0.4.17"
ctrlc = "3.2.5"
thiserror = "1"
hex = "0.4.3"
axum = { version = "0.6.11", features=["json"] }
nostr-sdk = { version = "0.19", default_features=false }

[dev-dependencies]
serial_test = "1.0.0"
tracing-test = "0.2.4"

[build-dependencies]
tonic-build = { version="0.8.3", features = ["prost"] }